# csoc-2023-task-4-Django-master

./: .gitignore  README.md  pyproject.toml  requirements.txt
authentication/: urls.py  views.py
store/: models.py  urls.py  views.py
store/migrations/: 0003_auto_20230730_1612.py  0004_auto_20230731_1343.py
store/static/css/: styles.css
store/templates/store/: base.html  book_detail.html  book_list.html  loaned_books.html
