[tool.poetry]
name = "csoc-2021-task-4-django"
version = "0.1.0"
description = "week 4 task 1 django"
authors = ["Lakshya Singh <lakshay.singh1108@gmail.com>"]
readme = "README.md"
packages = [{include = "csoc_2021_task_4_django"}]

[tool.poetry.dependencies]
python = "3.7.10"
asgiref = "3.7.2"
distlib = "0.3.6"
certifi = "2023.5.7"
dj-database-url = "2.0.0"
django = "3.2.19"
filelock = "3.12.2"
gunicorn = "20.1.0"
importlib-metadata = "6.7.0"
pbr = "5.11.1"
platformdirs = "3.8.0"
psycopg2-binary = "2.9.6"
pytz = "2023.3"
setuptools = "68.0.0"
sqlparse = "0.4.4"
typing-extensions = "4.7.0"
zipp = "3.15.0"
whitenoise = "^6.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
